--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ rvm:
 - 1.9.3
 script: bundle exec jekyll build
 install: bundle install
-after_success: bundle exec s3_website push --headless
+after_success: disable_parallel_processing=true bundle exec s3_website push --headless
 env:
   global:
   - secure: aqMj93DsysHVIxS0y0HzJQNKws1dzhuWDovdnBYWS+elqbB9si8DHcZs0eyZR3optmKI0snNBQw2x+bM8HtmtSJs8ygitwgQ7eoiNQV8zOszX0mPq5Da09OFs/aXlhfDM5lU1GIsdzlM0Lz1dSU2bnrWz5JPaLTGebfpb8ZH/GU=
